# GIWIFI

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
frontend/: package.json  rsbuild.config.ts  tsconfig.json
frontend/src/: App.vue  index.css
frontend/src/components/shadcn/button/: Button.vue
frontend/src/components/shadcn/card/: Card.vue  CardAction.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
frontend/src/components/shadcn/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogScrollContent.vue  DialogTitle.vue
frontend/src/components/shadcn/input/: Input.vue
frontend/src/components/shadcn/label/: Label.vue
giwifi/: Cargo.toml
giwifi/src/: aes.rs
javascript/: index.ts  package.json  tsconfig.json
js/: index.js  package.json  pnpm-lock.yaml
lib/: Cargo.toml
lib/src/: aes.rs  lib.rs
python/: aes.py  main.py  r.txt
rust/: Cargo.toml  build.rs  main.manifest
rust/src/: aes.rs  lib.rs  login.rs  logout.rs  main.rs  ui.rs
ui/: Cargo.toml  tauri.conf.json
ui/src/: lib.rs  main.rs
