[package]
name = "giwifi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
giwifi = { path = "../lib" }
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "env"] }
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
