[package]
name = "giwifi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive", "env"] }

aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
ecb = "0.1.2"

url = "2.5.7"
scraper = { version = "0.24.0" }
reqwest = { version = "0.12.24", features = ["json"] }


serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
chrono = "0.4.42"
md5 = "0.8.0"
hex-literal = "1.1.0"
hex = "0.4.3"
serde_json = "1.0.145"
