[package]
name = "giwifi"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
rust-crypto = "0.2.36"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
# urlencoding = "2.1.3"
