[package]
name = "giwifi"
version = "1.0.0"
edition = "2021"
[dependencies]
clap = { version = "4.5.17", features = ["derive"] }

base64 = "0.22.1"
rust-crypto = "0.2.36"

serde_urlencoded = "0.7.1"
serde = { version = "1.0.210", features = ["derive"] }


reqwest = { version = "0.12.7", features = [
    "blocking",
    "rustls-tls",
    "gzip",
], default-features = false }

scraper = "0.20.0"
urlencoding = "2.1.3"
