[package]
name = "giwifi"
version = "1.0.0"
edition = "2021"

[package.metadata.winres]
language = 0x0804
FileDescription = "Giwifi - github.com/mcitem"
ProductName = "Giwifi"
FileVersion = "1.0.0.0"
ProductVersion = "1.0.0.0"
LegalCopyright = "github.com/mcitem"

[[bin]]
path = "src/main.rs"
name = "giwifi"

[[bin]]
path = "src/ui.rs"
name = "giwifi-ui"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }

aes = "0.8.4"
cbc = "0.1.2"
base64 = "0.22.1"

serde_urlencoded = "0.7.1"
serde = { version = "1.0.210", features = ["derive"] }


reqwest = { version = "0.12.7", features = [
    "blocking",
    "rustls-tls",
    "gzip",
], default-features = false }

scraper = "0.20.0"
urlencoding = "2.1.3"

native-windows-gui = { version = "1.0.13", default-features = false, features = [
    "high-dpi",
] }
native-windows-derive = "1.0.5"
